--- a/Assignment3/.gitignore
+++ b/Assignment3/.gitignore
@@ -67,3 +67,31 @@ xlnx_auto_0_xdb/
 xst/
 _ngo/
 _xmsgs/
+
+
+# ignore ModelSim generated files and directories (temp files and so on)
+[_@]*
+
+# ignore compilation output of ModelSim
+*.mti
+*.dat
+*.dbs
+*.psm
+*.bak
+*.cmp
+*.jpg
+*.html
+*.bsf
+
+# ignore simulation output of ModelSim
+wlf*
+*.wlf
+*.vstf
+*.ucdb
+cov*/
+transcript*
+sc_dpiheader.h
+vsim.dbg
+*.fdo
+*.udo
+*.version
